<resources>
    <string name="app_name">figma project</string>
    <string name="Welcome_Back">welcome Back!</string>
    <string name="login">login</string>
    <string name="your_phon_number">Your Phone Number</string>
    <string name="Login">Login</string>
    <string name="verification">Verification</string>
    <string name="opt"><center><u>Enter the <b>OTP</b>  code from the phone we just sent to you</u></center></string>
    <string name="digit1"><u>     </u></string>
    <string name="dont_receive">Dont receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">verify and proceed</string>
    <string name="img_hand">image hand</string>
    <string name="first_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="email">Email id</string>
    <string name="dob">DD/MM/YYYY</string>
    <string name="continue_">Continue</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="others">OTHERS</string>
    <string name="title_activity_nagavation">nagavation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nagavation_drawer">nagavation_drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_helpcenter">helpcenter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>