<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".details_page">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:contentDescription="@string/img_hand"
        app:srcCompat="@drawable/img_4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/first_name"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="15sp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingTop="15sp"
                android:paddingBottom="20sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="15sp"
                android:hint="@string/Last_name"
                android:inputType="text"
                android:paddingTop="15sp"
                android:paddingBottom="20sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="15sp"
                android:hint="@string/your_phon_number"
                android:inputType="number"
                android:paddingTop="15sp"
                android:paddingBottom="20sp" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15sp"
                android:hint="@string/email"
                android:paddingTop="15sp"
                android:paddingBottom="20sp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="15sp"
                android:hint="@string/dob"
                android:inputType="date"
                android:paddingTop="15sp"
                android:paddingBottom="20sp" />


            <TextView
                android:id="@+id/dbtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"

                android:text=""
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/malebtn"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="50dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="6dp"
                        android:gravity="center"
                        android:text="@string/male"
                        android:textColor="@drawable/radio_text" />

                    <RadioButton
                        android:id="@+id/femalebtn"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="50sp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="6dp"
                        android:gravity="center"
                        android:text="@string/female"
                        android:textColor="@drawable/radio_text" />

                    <RadioButton
                        android:id="@+id/otherbtn"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40sp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="6dp"
                        android:gravity="center"
                        android:text="@string/others"
                        android:textColor="@drawable/radio_text" />
                </RadioGroup>


            </LinearLayout>


            <Button
                android:id="@+id/continuebtn"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/login_button"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="16sp"

                android:textStyle="bold" />
            <!--btnContinue-->
            <!--ryt,lyt,frm-->

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:srcCompat="@drawable/img_2" />


</LinearLayout>