<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".otp_page">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="37sp"
        android:text="@string/verification"
        android:textColor="#064c9f"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="50sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/img_3"
        android:layout_marginTop="2sp"
        android:layout_gravity="center"
        android:contentDescription="img_otp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:paddingStart="15sp"
        android:text="@string/opt"
        android:textColor="#818286"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="italic"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:gravity="center">
      <EditText
          android:id="@+id/digit1"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:inputType="number"
          android:maxLength="1"
          android:gravity="center"
          android:textSize="30sp"
          android:textStyle="bold"

          />

      <EditText
          android:id="@+id/digit2"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:textSize="30sp"
          android:textStyle="bold"
          android:maxLength="1"
          android:inputType="number"

          android:gravity="center"/>
      <EditText
          android:id="@+id/digit3"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:textSize="30sp"
          android:textStyle="bold"
          android:inputType="number"

          android:gravity="center"
          android:maxLength="1"/>
      <EditText
          android:id="@+id/digit4"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:textSize="30sp"
          android:textStyle="bold"
          android:inputType="number"

          android:gravity="center"
          android:maxLength="1"/>
      <EditText
          android:id="@+id/digit5"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:textSize="30sp"
          android:textStyle="bold"
          android:inputType="number"

          android:gravity="center"
          android:maxLength="1"/>
      <EditText
          android:id="@+id/digit6"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:background="?android:attr/selectableItemBackground"
          android:hint="@string/digit1"
          android:textSize="30sp"
          android:textStyle="bold"
          android:inputType="number"

          android:gravity="center"
          android:maxLength="1"/>
      </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/dont_receive"
            android:textColor="#AAA1A1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resentbtn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="16sp"
            android:text="@string/resend_otp"
            android:textColor="#064c9F" />

    </LinearLayout>

    <Button
        android:id="@+id/proceed"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/login_button"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        app:srcCompat="@drawable/img_2" />



</LinearLayout>